[package]
name = "rayoff"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0" 
repository = "https://github.com/nhwn/rayoff"
description = "rayon but it's map-reduce"
keywords = ["parallel", "thread", "concurrency", "join", "performance"]
categories = ["concurrency"]
authors = ["Nathan Nguyen <nathan.tm.nguyen@gmail.com>"]

[dependencies]
